--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="ru">
 <head>
   <meta charset="utf-8">
-  <title>Lesson 14</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.33/browser.js"></script>
-    <link rel="stylesheet" href="style.css">
+  <title>Hero Screen</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 </head>
 <body>
   <div id="app"></div>
